// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`levelset constructor levels 1`] = `
Object {
  "levels": Array [
    Object {
      "cells": Array [
        "     ",
        "     ",
        "     ",
      ],
      "demo": null,
      "height": 3,
      "infotronsNeed": "all",
      "initialFreezeZonks": false,
      "initialGravity": false,
      "isResizable": true,
      "maxTitleLength": 23,
      "specialPorts": Array [],
      "title": "                       ",
      "width": 5,
    },
    Object {
      "cells": Array [
        "       ",
        "       ",
        "       ",
        "       ",
        "       ",
        "       ",
        "       ",
        "       ",
        "       ",
      ],
      "demo": null,
      "height": 9,
      "infotronsNeed": "all",
      "initialFreezeZonks": false,
      "initialGravity": false,
      "isResizable": true,
      "maxTitleLength": 23,
      "specialPorts": Array [],
      "title": "                       ",
      "width": 7,
    },
  ],
  "levelsCount": 2,
  "maxLevelsCount": 32767,
  "minLevelsCount": 1,
}
`;

exports[`levelset constructor none 1`] = `
Object {
  "levels": Array [
    Object {
      "cells": Array [
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
      ],
      "demo": null,
      "height": 24,
      "infotronsNeed": "all",
      "initialFreezeZonks": false,
      "initialGravity": false,
      "isResizable": true,
      "maxTitleLength": 23,
      "specialPorts": Array [],
      "title": "                       ",
      "width": 60,
    },
  ],
  "levelsCount": 1,
  "maxLevelsCount": 32767,
  "minLevelsCount": 1,
}
`;

exports[`levelset constructor number 1`] = `
Object {
  "levels": Array [
    Object {
      "cells": Array [
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
      ],
      "demo": null,
      "height": 24,
      "infotronsNeed": "all",
      "initialFreezeZonks": false,
      "initialGravity": false,
      "isResizable": true,
      "maxTitleLength": 23,
      "specialPorts": Array [],
      "title": "                       ",
      "width": 60,
    },
    Object {
      "cells": Array [
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
        "                                                            ",
      ],
      "demo": null,
      "height": 24,
      "infotronsNeed": "all",
      "initialFreezeZonks": false,
      "initialGravity": false,
      "isResizable": true,
      "maxTitleLength": 23,
      "specialPorts": Array [],
      "title": "                       ",
      "width": 60,
    },
  ],
  "levelsCount": 2,
  "maxLevelsCount": 32767,
  "minLevelsCount": 1,
}
`;
